Refactor styles and scripts for payment and seat selection pages

--- a/Movie_Booking/sections/paymentsuccess.html
+++ b/Movie_Booking/sections/paymentsuccess.html
@@ -30,6 +30,6 @@
         <a href="home.html" class="mt-2 underline text-sm text-yellow-300">Kembali ke Beranda</a>
       </div>
     </div>
-    <script src="../scripts/PaymentSuccess.js"></script>
+    <script src="../scripts/paymentSuccess.js"></script>
   </body>
 </html>
