--- a/Movie_Booking/sections/landing_page.html
+++ b/Movie_Booking/sections/landing_page.html
@@ -27,7 +27,7 @@
           <a href="#film" class="nav-link">Film</a>
         </li>
         <li class="nav-item">
-          <a href="#jadwal" class="nav-link">Jadwal</a>
+          <a href="jadwal_landing.html" class="nav-link">Jadwal</a>
         </li>
         <li class="nav-item">
           <a href="login.html" class="nav-link">Login</a>
