Add preview film on landing page

--- a/Movie_Booking/sections/landing_page.html
+++ b/Movie_Booking/sections/landing_page.html
@@ -24,7 +24,7 @@
           <a href="#home" class="nav-link active">Home</a>
         </li>
         <li class="nav-item">
-          <a href="#film" class="nav-link">Film</a>
+          <a href="film_landing.html" class="nav-link">Film</a>
         </li>
         <li class="nav-item">
           <a href="jadwal_landing.html" class="nav-link">Jadwal</a>
