--- a/Movie_Booking/sections/pilih_kursi.html
+++ b/Movie_Booking/sections/pilih_kursi.html
@@ -12,19 +12,12 @@
   <div class="container">
     <h2 id="judulFilm"></h2>
     <div class="screen">LAYAR</div>
-
     <div id="seat-container"></div>
 
     <div class="legend">
-      <div class="legend-item">
-        <span class="legend-color available"></span> Tersedia
-      </div>
-      <div class="legend-item">
-        <span class="legend-color selected"></span> Dipilih
-      </div>
-      <div class="legend-item">
-        <span class="legend-color occupied"></span> Terisi
-      </div>
+      <div class="legend-item"><span class="legend-color available"></span> Tersedia</div>
+      <div class="legend-item"><span class="legend-color selected"></span> Dipilih</div>
+      <div class="legend-item"><span class="legend-color occupied"></span> Terisi</div>
     </div>
 
     <button id="submit">Konfirmasi</button>
@@ -36,12 +29,31 @@
     const seatContainer = document.getElementById("seat-container");
     const submitBtn = document.getElementById("submit");
 
-    // Reset kursi terisi agar semua kursi kosong
-    localStorage.removeItem("occupiedSeats");
+    // Ambil data dari localStorage
+    const film = localStorage.getItem("filmDipilih") || "Film";
+    const tanggal = localStorage.getItem("selectedDate") || new Date().toISOString().split('T')[0];
+    const jam = localStorage.getItem("selectedShowTime") || "19:00";
+    
+    // Buat booking key yang unik untuk kombinasi film, tanggal, dan jam
+    const bookingKey = `seats_${film}_${tanggal}_${jam}`;
+    console.log("Booking key:", bookingKey); // Debug log
+    
+    const occupiedSeats = JSON.parse(localStorage.getItem(bookingKey)) || [];
 
-    // Ambil data kursi terisi dari localStorage
-    const occupiedSeats =
-      JSON.parse(localStorage.getItem("occupiedSeats")) || [];
+    const filmImages = {
+      Inception: "../img/Inception.jpeg",
+      Interstellar: "../img/Interstelar.jpeg",
+      "The Dark Knight": "../img/The_Dark_Knight.jpeg",
+      "The Shawshank Redemption": "../img/The_Shawshank_Redemption.jpeg",
+      "The Theory of Everything": "../img/The_Theory_of_Everything.jpeg",
+      "Toy Story 4": "../img/Toy_Story.jpeg",
+    };
+    const filmImage = filmImages[film] || "";
+
+    document.getElementById("judulFilm").innerText = `Pilih Kursi Untuk "${film}" - ${jam} (${tanggal})`;
+
+    // Reset kursi untuk debugging - hapus ini di production
+    // localStorage.removeItem(bookingKey);
 
     // Buat kursi
     for (let i = 0; i < rows; i++) {
@@ -52,6 +64,7 @@
         const seatId = String.fromCharCode(65 + i) + (j + 1);
         const seat = document.createElement("div");
         seat.classList.add("seat");
+        seat.setAttribute("data-kursi", seatId);
         seat.textContent = seatId;
 
         if (occupiedSeats.includes(seatId)) {
@@ -70,45 +83,28 @@
       seatContainer.appendChild(rowDiv);
     }
 
-    // Mapping nama film ke gambar
-    const filmImages = {
-      Inception: "../img/Inception.jpeg",
-      Interstellar: "../img/Interstelar.jpeg",
-      "The Dark Knight": "../img/The_Dark_Knight.jpeg",
-      "The Shawshank Redemption": "../img/The_Shawshank_Redemption.jpeg",
-      "The Theory of Everything": "../img/The_Theory_of_Everything.jpeg",
-      "Toy Story 4": "../img/Toy_Story.jpeg",
-    };
-    const film = localStorage.getItem("filmDipilih") || "Film";
-    const filmImage = filmImages[film] || "";
-
-    // Ambil nama film dari localStorage
-    document.getElementById(
-      "judulFilm"
-    ).innerText = `Pilih Kursi Untuk "${film}"`;
-
     // Ketika tombol Konfirmasi ditekan
     submitBtn.addEventListener("click", () => {
       const selectedSeats = Array.from(
         document.querySelectorAll(".seat.selected")
-      ).map((seat) => seat.textContent);
+      ).map((seat) => seat.dataset.kursi);
+
       if (selectedSeats.length === 0) {
         alert("Silakan pilih minimal satu kursi!");
         return;
       }
 
-      // Simpan data film, kursi, dan gambar ke localStorage untuk halaman pembayaran
+      // Simpan kursi terpilih untuk jadwal spesifik ini
+      const updatedOccupied = [...new Set([...occupiedSeats, ...selectedSeats])];
+      localStorage.setItem(bookingKey, JSON.stringify(updatedOccupied));
+
+      // Simpan data untuk payment
       localStorage.setItem("selectedSeats", JSON.stringify(selectedSeats));
       localStorage.setItem("selectedFilm", film);
       localStorage.setItem("selectedFilmImage", filmImage);
 
-      // Tambahkan ke kursi terisi
-      const updatedOccupied = [
-        ...new Set([...occupiedSeats, ...selectedSeats]),
-      ];
-      localStorage.setItem("occupiedSeats", JSON.stringify(updatedOccupied));
+      console.log("Seats saved for:", bookingKey, selectedSeats); // Debug log
 
-      // Redirect ke halaman pembayaran
       window.location.href = "payment.html";
     });
   </script>
