Add date display and enhance PDF/CSV export formatting in payment details

--- a/Movie_Booking/sections/paymentsuccess.html
+++ b/Movie_Booking/sections/paymentsuccess.html
@@ -20,6 +20,7 @@
       <div class="mb-6 text-left">
         <h3 class="font-semibold mb-2">Detail Tiket</h3>
         <div><span class="font-bold">Film:</span> <span id="filmTitle"></span></div>
+        <div><span class="font-bold">Tanggal:</span> <span id="movieDate"></span></div>
         <div><span class="font-bold">Jam Tayang:</span> <span id="showTime"></span></div>
         <div><span class="font-bold">Kursi:</span> <span id="seats"></span></div>
         <div><span class="font-bold">Harga Total:</span> <span id="totalPrice"></span></div>
