--- a/Movie_Booking/sections/home.html
+++ b/Movie_Booking/sections/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CinemaBook - Home</title>
     <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/notification.css" />
   </head>
   <body>
     <!-- Navbar -->
@@ -136,6 +137,7 @@
     <script src="../scripts/SessionManager.js"></script>
     <script src="../scripts/MovieManager.js"></script>
     <script src="../scripts/NotificationManager.js"></script>
+    <script src="../scripts/NotificationSystem.js"></script>
     <script src="../scripts/logout.js"></script>
     <script>
       function pilihFilm(namaFilm) {
