--- a/Movie_Booking/sections/payment.html
+++ b/Movie_Booking/sections/payment.html
@@ -7,6 +7,7 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../styles/payment.css">
+  <link rel="stylesheet" href="../styles/notification.css" />
 </head>
 
 <body class="min-h-screen flex items-center justify-center p-4">
@@ -54,6 +55,7 @@
     </button>
   </div>
 
+  <script src="../scripts/NotificationSystem.js"></script>
   <script src="../scripts/payment.js"></script>
 </body>
 
